# live-variable-analysis

./: .tool-versions  CHANGELOG.md  README.md  assignment3.cabal  cabal.project  cabal.project.freeze
app/: Main.hs
src/: CFG.hs  Expression.hs  Print.hs
